# devjournal

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
Formula/: devjournal.rb
scripts/: release.sh  release_text.sh
src/: config.rs  daemon.rs  db.rs  git_poller.rs  main.rs  sem.rs  summary.rs  update.rs
src/llm/: anthropic.rs  claude.rs  cursor.rs  mod.rs  ollama.rs  openai.rs
src/summary_pipeline/: cluster.rs  evidence.rs  mod.rs  outcome.rs  render.rs
tests/: cli_contract.rs  release_flow.sh  smoke_release_unix.sh  smoke_release_windows.ps1
