[package]
name = "devjournal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devjournal"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = "0.19"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
