[package]
name = "devjournal"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "devjournal"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap_complete = "4"
dirs = "5"
anyhow = "1"
sha2 = "0.10"
spinners = "4.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Console"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
